--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -54,6 +55,7 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"/>
                 <EditText
+                    android:id="@+id/nickname1"
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="사용할 닉네임을 입력하세요." />
@@ -96,6 +98,7 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"/>
                 <EditText
+                    android:id="@+id/password2"
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="비밀번호를 입력하세요." />
@@ -116,6 +119,7 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"/>
                 <EditText
+                    android:id="@+id/re_password"
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="비밀번호를 다시 입력하세요." />
@@ -136,16 +140,18 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"/>
                 <RadioGroup
+                    android:id="@+id/r_Group"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <RadioButton
-
+                        android:id="@+id/man"
                         android:text="남자"
                         android:textSize="20sp"
                         android:layout_width="140dp"
                         android:layout_height="50dp"/>
                     <RadioButton
+                        android:id="@+id/woman"
                         android:text="여자"
                         android:textSize="20sp"
                         android:layout_width="140dp"
@@ -189,6 +195,7 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"/>
                 <Button
+                    android:id="@+id/btn1"
                     android:layout_marginLeft="30dp"
                     android:layout_width="200dp"
                     android:layout_height="50dp"
@@ -214,6 +221,7 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"/>
                 <EditText
+                    android:id="@+id/major"
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="당신의 전공을 입력하세요." />
@@ -262,6 +270,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/register_btn"
                     android:layout_marginLeft="50dp"
                     android:layout_marginBottom="20dp"
                     android:layout_width="300dp"
@@ -277,3 +286,4 @@
     </ScrollView>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
+</layout>
