--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -75,12 +75,28 @@
                     android:textSize="25sp"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"/>
-
                 <EditText
                     android:id="@+id/inputemail"
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="이메일을 입력하세요." />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/btn2"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="이메일 중복확인"
+                    android:textSize="15sp"
+                    android:textColor="#ffffff"
+                    android:background="@drawable/background_radius"
+                    />
+
             </LinearLayout>
 
             <LinearLayout
@@ -233,6 +249,34 @@
                 android:layout_marginTop="20dp"
                 android:orientation="horizontal">
                 <TextView
+                    android:text="학점"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="left"
+                    android:textStyle="bold"
+                    android:textSize="25sp"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/grade"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:layout_marginLeft="40dp"
+                    android:hint="당신의 학점평균을 입력하세요." />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+                <TextView
                     android:text="거주지"
                     android:layout_marginTop="5dp"
                     android:layout_marginLeft="10dp"
@@ -242,7 +286,6 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
