--- a/app/src/main/res/layout/activity_act_register.xml
+++ b/app/src/main/res/layout/activity_act_register.xml
@@ -138,6 +138,27 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">
+        <TextView
+            android:text="주민번호:"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="left"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"/>
+        <EditText
+            android:id="@+id/my_num"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:hint="주민번호를 입력하세요" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/register_act"
