--- a/app/src/main/res/layout/activity_scholar.xml
+++ b/app/src/main/res/layout/activity_scholar.xml
@@ -6,13 +6,75 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ScholarActivity">
-
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/resultview"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp"/>
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:background="@color/mainColor"
+                android:layout_height="125dp">
+
+                <LinearLayout
+                    android:layout_width="108dp"
+                    android:layout_height="10dp"
+                    android:orientation="vertical" />
+
+                <TextView
+                    android:text="현재 신청 가능한"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:text="추천 장학금"
+                    android:textStyle="bold"
+                    android:textSize="25sp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal" >
+                    <Button
+                    android:id="@+id/shobtn1"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="80dp"
+                    android:layout_height="25dp"
+                    android:text="장학금"
+                    android:textSize="10sp"
+                    android:textColor="#ffffff"
+                    android:background="@drawable/background_radius"
+                    />
+                    <Button
+                        android:id="@+id/policybtn2"
+                        android:layout_marginLeft="10dp"
+                        android:layout_width="80dp"
+                        android:layout_height="25dp"
+                        android:text="청년 정책"
+                        android:textSize="10sp"
+                        android:textColor="#ffffff"
+                        android:background="@drawable/background_radius"
+                        />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/resultview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="16dp"/>
+
+        </LinearLayout>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
