--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -5,12 +5,49 @@
     android:orientation="horizontal"
     android:padding="8dp"
     android:background="@drawable/wal">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="30dp"
+        android:text="제목입니다."
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"/>
+
+    <TextView
+        android:id="@+id/date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="날짜입니다."
+        android:layout_marginLeft="30dp"
+        android:textSize="14sp"
+        android:textColor="@android:color/darker_gray"
+        android:layout_marginTop="4dp"/>
+
+    <TextView
+        android:id="@+id/content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="내용입니다.."
+        android:layout_marginLeft="30dp"
         android:textSize="16sp"
-        android:textColor="@android:color/white"
-        android:padding="8dp" />
+        android:layout_marginTop="50dp"
+        android:textColor="@android:color/black"/>
+
+        <Button
+            android:id="@+id/detailButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="250dp"
+            android:text="자세히 보기"
+            android:layout_marginTop="8dp"/>
+
+    </LinearLayout>
 </LinearLayout>
