--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -38,16 +38,18 @@
         android:text="내용입니다.."
         android:layout_marginLeft="30dp"
         android:textSize="16sp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:textColor="@android:color/black"/>
 
         <Button
             android:id="@+id/detailButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="250dp"
+            android:layout_height="35dp"
+            android:background="@drawable/background_radius"
+            android:layout_marginLeft="255dp"
             android:text="자세히 보기"
-            android:layout_marginTop="8dp"/>
+            android:textColor="@color/white"
+            android:layout_marginTop="15dp"/>
 
     </LinearLayout>
 </LinearLayout>
