--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/nicktext"
             android:text="herbysw님 환영합니다!"
             android:layout_marginLeft="15dp"
             android:textSize="18sp"
@@ -52,6 +53,45 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/wal"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="30dp"
+                android:text="Chat DPT의 장학금 추천!"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"/>
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="지금 누릴수 있는 장학금 혜택을 확인해보세요!"
+                android:layout_marginLeft="30dp"
+                android:textSize="14sp"
+                android:textColor="@android:color/darker_gray"
+                android:layout_marginTop="4dp"/>
+
+            <Button
+                android:id="@+id/detailButtongo"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:background="@drawable/background_radius"
+                android:layout_marginLeft="285dp"
+                android:text="바로가기"
+                android:textColor="@color/white"
+                android:layout_marginTop="70dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
@@ -61,7 +101,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                android:text="계좌 확인"
+                android:text="내 계좌 확인하기"
                 android:textSize="20sp"
                 android:textColor="#ffffff"
                 android:background="@drawable/background_radius"
