--- a/app/src/main/res/layout/activity_money.xml
+++ b/app/src/main/res/layout/activity_money.xml
@@ -36,6 +36,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/btnsetting"
+                android:layout_marginLeft="14dp"
+                android:layout_width="30dp"
+                android:layout_height="27dp"
+                android:scaleType="fitCenter"
+                android:background="@color/mainColor"
+                android:src="@drawable/setting"
+                android:visibility="visible"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/text2"
