--- a/app/src/main/res/layout/activity_scholar.xml
+++ b/app/src/main/res/layout/activity_scholar.xml
@@ -48,7 +48,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_width="80dp"
                     android:layout_height="25dp"
-                    android:text="장학금"
+                    android:text="업데이트"
                     android:textSize="10sp"
                     android:textColor="#ffffff"
                     android:background="@drawable/background_radius"
@@ -58,7 +58,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_width="80dp"
                         android:layout_height="25dp"
-                        android:text="청년 정책"
+                        android:text="새로고침"
                         android:textSize="10sp"
                         android:textColor="#ffffff"
                         android:background="@drawable/background_radius"
