--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         <ImageView
             android:layout_width="200dp"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/applogogray"/>
+            app:srcCompat="@drawable/small_logo"/>
     </LinearLayout>
 
 
