--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginLeft="30dp"
-                android:text="Chat DPT의 핵심기능!! 나만의 비서AI"
+                android:text="UniMon의 핵심기능!! 나만의 비서AI"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"/>
@@ -104,7 +104,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginLeft="30dp"
-                android:text="Chat DPT의 장학금 추천!"
+                android:text="UniMon의 장학금 추천!"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"/>
@@ -162,7 +162,14 @@
             android:id="@+id/addScheduleButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
             android:text="스케쥴 추가" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
         <GridLayout
             android:id="@+id/scheduleGrid"
@@ -172,8 +179,18 @@
             android:columnCount="8"
             android:rowCount="20"
             android:padding="4dp"
+            android:background="@drawable/bubble_user"
             android:orientation="horizontal">
         </GridLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginTop="30dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
+        </LinearLayout>
 
     </LinearLayout>
     </ScrollView>
